[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/register.gd" type="Script" id=1]
[ext_resource path="res://Fonts/MainFont.tres" type="DynamicFont" id=2]

[node name="register" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
margin_left = -3.0
margin_top = 1.0
margin_right = 1077.0
margin_bottom = 1921.0
color = Color( 0.027451, 0.572549, 0.596078, 1 )

[node name="EmailInput" type="LineEdit" parent="background"]
margin_left = 309.0
margin_top = 893.0
margin_right = 1009.0
margin_bottom = 949.0
custom_fonts/font = ExtResource( 2 )

[node name="EmailLabel" type="Label" parent="background"]
margin_left = 50.0
margin_top = 899.0
margin_right = 150.0
margin_bottom = 945.0
rect_pivot_offset = Vector2( 291, 531 )
custom_fonts/font = ExtResource( 2 )
text = "Email"

[node name="PasswordLabel" type="Label" parent="background"]
margin_left = 50.0
margin_top = 1000.0
margin_right = 150.0
margin_bottom = 1046.0
custom_fonts/font = ExtResource( 2 )
text = "Hasło"

[node name="PasswordInput" type="LineEdit" parent="background"]
margin_left = 309.0
margin_top = 995.0
margin_right = 1009.0
margin_bottom = 1051.0
custom_fonts/font = ExtResource( 2 )
secret = true

[node name="ConfirmPasswordLabel" type="Label" parent="background"]
margin_left = 50.0
margin_top = 1100.0
margin_right = 265.0
margin_bottom = 1146.0
custom_fonts/font = ExtResource( 2 )
text = "Powtórz hasło"

[node name="ConfirmPasswordInput" type="LineEdit" parent="background"]
margin_left = 309.0
margin_top = 1095.0
margin_right = 1009.0
margin_bottom = 1151.0
custom_fonts/font = ExtResource( 2 )
secret = true

[node name="RegisterButton" type="Button" parent="background"]
margin_left = 450.0
margin_top = 1250.0
margin_right = 650.0
margin_bottom = 1350.0
custom_fonts/font = ExtResource( 2 )
text = "Zarejestruj"

[node name="BackButton" type="Button" parent="background"]
margin_left = 830.0
margin_top = 30.0
margin_right = 1030.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 2 )
text = "Powrót"

[connection signal="pressed" from="background/BackButton" to="." method="_on_BackButton_pressed"]
